--- a/workflows/pyproject.toml
+++ b/workflows/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "workflow-use"
-version = "0.0.3"
+version = "0.2.1"
 authors = [{ name = "Gregor Zunic" }]
 description = "Create, edit, run deterministic workflows"
 readme = "README.md"
@@ -20,6 +20,7 @@ dependencies = [
     "uvicorn>=0.34.2",
     "faiss-cpu==1.10.0",
     "pandas>=2.3.0",
+    "markdownify>=0.11.6",
 ]
 
 
